--- a/style.css
+++ b/style.css
@@ -1,90 +1,54 @@
 *{
-    margin:0px ;
-    padding: 0px;
+    margin:0;
+    padding:0;
+    font-family:'Poppins',sans-serif;
     box-sizing: border-box;
-    font-family: 'Poppins',sans-serif;
 }
-
 .container{
-    width: 100%;
-    min-height: 100vh;
-    background-image:linear-gradient(rgba(0,0,0,0.65),rgba(0,0,0,0.65)), url("https://media.istockphoto.com/id/1191904639/photo/recipes-for-healthy-meal.jpg?s=612x612&w=0&k=20&c=IQE6WnGZnhLSQ_cB_YvZt_W7iOYyuwDDjo1dzsUp4Kk=");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    width:100%;
+    height:100vh;
+    background: #e3f9ff;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+.calculator{
+    background: #3a4452;
+    padding:20px;
+    border-radius:10px;
+}
+.calculator form input{
+border: 0;
+outline: 0;
+width: 60px;
+height: 60px;
+border-radius: 10px;
+box-shadow:-8px -8px 15px rgba(255,255,255,0.1),
+5px 5px 15px rgba(0,0,0,0.2) ;
+background: transparent;
+font-size: 20px;
+color: #ffff;
+cursor: pointer;
+margin: 10px;
 
 }
-.row{
-    width: 100%;
-    padding: 0px 80px;
-}
-.navbar{
-    width: 100%;
+
+form .display{
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 0px;
-    position: relative;
-    z-index: 1;
+    justify-content: flex-end;
+    margin: 20px 0;
 }
-.navbar ul{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10px;
-}
-.navbar ul li{
-   list-style: none;
-}
-.navbar ul li a{
-    padding:10px 18px;
-    border-radius: 5px;
-    font-family: sans-serif;
-    font-size: 16px;
-    color: #fff;
-    text-decoration: none;
-}
-.navbar ul li a:hover{
-    background-color: #5d88d5;
-}
-.navbar h1{
-    color: #fff;
-    font-size: 35px;
-    font-weight:500 ;
-    text-transform: uppercase;
-    margin-top: 10px;
-}
-.content{
-    width: 100%;
-    min-height: 100vh;
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-.content h1{
+
+form .display input{
+    text-align: right;
+    flex: 1;
     font-size: 45px;
-    color: rgba(235, 223, 223, 0.674);
-    font-weight: 400;
+    box-shadow: none;
 }
-.content p{
-    font-size: 20px;
-    color: rgba(212, 150, 136, 0.89);
+
+form input.equal{
+    width: 145px;
 }
-.content a{
-    text-decoration:none ;
-    margin-top: 20px;
-    font-size: 19px;
-    display: inline-block;
-    letter-spacing: 2px;
-    padding: 12px 20px;
-    background-color: #5d88d5;
-    border-radius:5px ;
-    color: #fff;
-}
-.content a:hover{
-    background-color: #2d88d5;
+form input.operator{
+    color:aquamarine;
 }
